# data-evoker

./: README.md  pyproject.toml  requirements.txt
src/: data_evoker.py  main.py  properties.py
src/data_evoker/: data_evoker.py  main.py
tests/: basic_test.json  basic_test2.json  basic_test3.json  data_evoker_test.py
